<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/registerProgress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/corporateLogo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/corporate_logo"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/registerTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:text="@string/register"
                android:textColor="@color/Flare"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:textSize="16sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:ems="10"
                android:hint="Name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:textColor="@color/MatteCharcoal" />

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:textSize="16sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:ems="10"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:textColor="@color/MatteCharcoal" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:textSize="16sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@color/MatteCharcoal" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:textSize="16sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/MatteCharcoal" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_background"
                android:textColor="@color/Milk"
                android:text="@string/register" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/MatteCharcoal"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/loginClick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:text=" Login Here"
                    android:textColor="@color/Flare"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>