<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        app:menu="@menu/nav_drawer"
        android:layout_gravity="start"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <EditText
            android:id="@+id/searchField2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:textSize="16sp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:ems="10"
            android:hint="@string/filterFieldHint"
            android:inputType="textPersonName"
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toStartOf="@+id/resetButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:textColor="@color/Milk"
            android:text="@string/resetButtonText"
            app:layout_constraintBaseline_toBaselineOf="@+id/searchField2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/searchField2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchResults"
            android:background="@color/TransparentLightGray"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:scrollbars="vertical"
            android:scrollbarSize="5dp"
            android:scrollbarStyle="outsideInset"
            android:scrollbarThumbVertical="@drawable/scrollbar"
            app:layout_constraintTop_toBottomOf="@id/searchField2"
            app:layout_constraintBottom_toTopOf="@id/suggestField">
        </androidx.recyclerview.widget.RecyclerView>

        <EditText
            android:id="@+id/suggestField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/edit_text_background"
            android:textSize="16sp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:ems="10"
            android:hint="@string/suggestFieldHint"
            android:inputType="textPersonName"
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            app:layout_constraintBottom_toBottomOf="@+id/suggestButton"
            app:layout_constraintEnd_toStartOf="@+id/suggestButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/suggestButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:textColor="@color/Milk"
            android:onClick="addSuggestion"
            android:text="@string/submitButtonText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/suggestField" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>